# csubb

./: .gitignore  README.md  script.sh
Semestru 1/ASC/examen scris/: 935462c4-c746-4b7d-8378-ab7c3b417885.jfif
Semestru 1/ASC/lab/: tema_lab5  tema_lab5.asm  tema_lab5.lst
Semestru 1/Algebra/partial2/: 6a2b4403-76f9-405d-bfc5-6ce640b948e3.jfif
Semestru 1/Analiza/examen/: 00e921a4-322d-4f73-8bb4-6132f3dbe32c.jfif  94f3adaa-a799-4522-8a83-4bb2d50475e1.jfif  cf8eb58a-f10a-441b-a625-6ab50de7c365.jfif  fcd5534b-d97e-4ec2-b29c-eb72e94e6f34.jfif
Semestru 1/FP/examen practic/: 48c589d5-12bd-42e4-a4e6-682e332f5fc6.jfif  7d0157a2-caf2-4c84-a613-36cae28b9865.jfif  f83ae0bf-900e-4ca6-875a-e25641efb4c7.jfif
Semestru 1/LC/curs/: desktop.ini
Semestru 2/: README.txt
Semestru 2/OOP/lab/lab05/: CMakeLists.txt  actiuni.c  actiuni.h  cheltuiala.c  cheltuiala.h  lista.c  lista.h  main.c  teste.c  teste.h  validator.c  validator.h
Semestru 2/SDA/lab/sda_lab01/lab01p/: App.cpp  CMakeLists.txt  IteratorVectorDinamic.cpp  TestScurt.cpp  VectorDinamic.cpp  VectorDinamic.h  lab01p.cbp  lab01p.layout
Semestru 2/SDA/lab/sda_lab04/: CMakeLists.txt  DO.cpp  DO.h  Iterator.cpp  Iterator.h  TestExtins.cpp
Semestru 2/SDA/lab/sda_lab04vs/: App.cpp  CMakeLists.txt  DO.cpp  DO.h  Iterator.cpp  Iterator.h  TestExtins.cpp  TestScurt.cpp  TestScurt.h  cerinta.txt  lab04sda.cpp
Semestru 3/BD/curs/: Curs09 - Indecs-Structuri arborescente.ppsx  Curs12 - Probleme.ppsx
Semestru 3/BD/practic/: sub1.sql  sub2.sql  sub3.sql
Semestru 3/BD/practice/: sub1.sql  sub2.sql  sub3.sql
Semestru 3/BD/seminar/: seminar4.sql
Semestru 3/MAP/curs/: Curs 1.docx  ~$Curs 1.docx
Semestru 3/MAP/practic/: practic.rar
Semestru 3/PLF/curs/: Curs 1.docx  (+1 more)
Semestru 5/PC/: README.md
(+1843 files in other folders)
